--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                         <div class="price-option"><strong>R$ 159/mês</strong> com frete incluso</div>
                     </div>
                     <p class="price-detail">Ideal para quem está começando e quer experimentar sem compromisso grande</p>
-                    <a href="#quiz" class="btn">Começar agora</a>
+                    <a href="comecar-agora.html" class="btn">Começar agora</a>
                 </div>
                 <div class="pricing-card featured">
                     <h3>Descoberta</h3>
@@ -646,7 +646,7 @@
                         <div class="price-option"><strong>R$ 229/mês</strong> com frete incluso</div>
                     </div>
                     <p class="price-detail">Mais popular entre iniciantes. Variedade ideal para descobrir seus favoritos</p>
-                    <a href="#quiz" class="btn">Começar agora</a>
+                    <a href="comecar-agora.html" class="btn">Começar agora</a>
                 </div>
                 <div class="pricing-card">
                     <h3>Premium Tranquilo</h3>
@@ -656,7 +656,7 @@
                         <div class="price-option"><strong>R$ 309/mês</strong> com frete incluso</div>
                     </div>
                     <p class="price-detail">Rótulos selecionados de maior complexidade, mas ainda com explicações simples</p>
-                    <a href="#quiz" class="btn btn-secondary">Começar agora</a>
+                    <a href="comecar-agora.html" class="btn btn-secondary">Começar agora</a>
                 </div>
             </div>
         </div>
